# VerdictPlane

./: .attribution-allow  ARCHITECTURE.md  CASE_STUDY.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REPRODUCE.md  pyproject.toml
.github/workflows/: ci.yml
bench/: run_bench.py
benchmarks/eag_bench/: NEXT.md  README.md  compliance.py  eag.py  replay.py
benchmarks/eag_bench/cases/: cloud_iam.create_key.allow_after_approval.json  cloud_iam.create_user.require_human.json  cloud_iam.delete_role.require_human.json  cloud_iam.disable_mfa.deny.json  code_deployment.deploy_prod.allow_after_approval.json  code_deployment.deploy_prod.deny_after_timeout.json  code_deployment.deploy_prod.deny_after_veto.json  code_deployment.deploy_unsigned_staging.deny.json  code_deployment.hotfix_prod.require_human.json  data_export_pii.export_https.deny.json  data_export_pii.export_internal_nonpii.require_human.json  data_export_pii.export_pii.allow_after_approval.json  data_export_pii.export_pii.deny_after_timeout.json  data_export_pii.export_webhook.deny.json  data_export_pii.list_reports.allow.json  data_export_pii.read_masked.allow.json  finance_payment.pay_large.allow_after_approval.json  finance_payment.pay_over_ceiling.deny.json  finance_payment.refund.require_human.json  finance_payment.set_limit.require_human.json  hr_employee_data.delete_record.require_human.json  hr_employee_data.export_bulk_pii.deny.json  hr_employee_data.export_small.require_human.json  hr_employee_data.read_directory.allow.json  hr_employee_data.read_profile.allow.json  hr_employee_data.update_address.allow_after_approval.json  hr_employee_data.update_salary.require_human.json  (+27 more)
deploy/: Dockerfile  demo_agent.py  sidecar-compose.yml
docs/: BENCHMARK.md  EAG_BENCH.md  EVIDENCE.md  EVIDENCE_APPENDIX.md  METRICS.md  READINESS_SUMMARY.md  REVIEW_GATE.md  ROADMAP_V0.2.md
examples/: mcp_agent_demo.py  quickstart.py
pilots/wwt/: promotion_intake.py
policies/: policy.yaml  workloads.yaml
scripts/: build_evidence.py
src/keystone/: __init__.py  advisory.py  cli.py  gate.py  interceptor.py
src/verdictplane/: __init__.py  advisory.py  cli.py  gate.py  interceptor.py  mcp.py  policy.py  provenance.py  types.py
tests/: test_advisory.py  test_cli.py  test_compliance.py  test_durability.py  test_eag_score.py  test_enforcement_imports.py  test_interceptor.py  test_mcp.py  test_policy.py  test_promotion_intake.py  test_provenance.py  test_quorum.py  test_redteam.py  test_replay.py  test_workloads.py  test_zero_egress.py
workloads/: __init__.py  driftguard_promote.py  sentinel_action.py
(+22 files in other folders)
