[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verdictplane"
version = "0.1.0"
description = "In-path, zero-egress control plane for AI actions: tamper-evident provenance, deterministic policy, human approval gates."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Frank Asante Van Laarhoven", email = "frankleroyvan@gmail.com" }]
license = { text = "MIT" }
keywords = ["ai-governance", "provenance", "human-in-the-loop", "policy", "mcp", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/FrankAsanteVanLaarhoven/VerdictPlane"
Evidence = "https://github.com/FrankAsanteVanLaarhoven/VerdictPlane/blob/main/docs/EVIDENCE.md"
Benchmarks = "https://github.com/FrankAsanteVanLaarhoven/VerdictPlane/blob/main/docs/BENCHMARK.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
verdictplane = "verdictplane.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
